generated/checkers/gen/AllGen-UAF-7decd1f5904a489d3ccdcf131972f94645681689/build_logs/syntax-repair-05/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘const clang::ento::SymExpr* {anonymous}::SAGenTestChecker::getBaseSymbolFromRegion(const clang::ento::MemRegion*) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:105:16: error: ‘const class clang::ento::MemRegion’ has no member named ‘getSuperRegion’; did you mean ‘getBaseRegion’?
  105 |     Cur = Cur->getSuperRegion();
      |                ^~~~~~~~~~~~~~
      |                getBaseRegion
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::reportUAF(clang::ento::SymbolRef, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:169:61: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::SymExpr*, const clang::IdentifierInfo*> >::lookup_type’ {aka ‘const clang::IdentifierInfo* const*’} to ‘const clang::IdentifierInfo*’ in initialization
  169 |     if (const IdentifierInfo *ID = State->get<FreedOriginFn>(Sym)) {
      |                                    ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
      |                                                             |
      |                                                             clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::SymExpr*, const clang::IdentifierInfo*> >::lookup_type {aka const clang::IdentifierInfo* const*}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
